--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -48,19 +48,21 @@
                                 Library
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="{% url "store:all_products" %}">All</a></li>
+                                <li><a class="dropdown-item" href="{% url 'store:all_products' %}">All</a></li>
                                 {% for c in categories %}
-                                <li {% if category.slug == c.slug %}class="selected" {% endif %}>
-                                    <a class="dropdown-item" href="">{{ c.name|title }}</a>
+                                <li >
+                                    <a class="dropdown-item" href="{{c.get_absolute_url}}">{{ c.name|title }}</a>
                                 </li>
+
+                                 
                                 {% endfor %}
                                
                             </ul>
                         </li>
                     </ul>
 
-
                    
+   
 
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -71,6 +73,9 @@
         </nav>
                            </header>
 
-    <div id="content">{% block content %} {% endblock %}</div>
+    <div id="content">{% block content %}
+      
+      
+      {% endblock %}</div>
   </body>
 </html>
