--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -1,5 +1,10 @@
-{% extends './base.html' %}} {% load static %} {% block title%} Home
-{%endblock%} {% block content%}
+{% extends './base.html' %}
+{% load static %} 
+{% block title%} Home
+{%endblock%} 
+
+
+{% block content%}
 
 <main>
   <section class="py-5 text-center container">
