--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -1,2 +1,2 @@
 {% extends "../base.html" %} {% load static %} {% block title %}Basket Summary
-{% endblock %} {% block content %} Basket Page {% endblock %}
+{% endblock %} {% block content %} Basket Page hi {{basket}} {% endblock %}
