--- a/templates/store/products/product_detail.html
+++ b/templates/store/products/product_detail.html
@@ -13,7 +13,7 @@
         />
       </div>
       <div class="col-md-7 col-lg-7 ps-md-3 ps-lg-5">
-        <h1 class="mb-0 h4">{{ product.title }}</h1> 
+        <h1 class="mb-0 h4">{{ product.title }}</h1>
         <p><span class="lead">{{ product.author }}</span> (Author)</p>
         <p>{{ product.description|slice:":355" }}...</p>
         <div class="border">
@@ -37,7 +37,12 @@
                 </select>
               </div>
               <div class="col-6 text-end">
-                <button type="button" class="btn btn-secondary btn-sm">
+                <button
+                  id="add-button"
+                  value="{{product.id}}"
+                  type="button"
+                  class="btn btn-secondary btn-sm"
+                >
                   Add to basket
                 </button>
               </div>
@@ -49,4 +54,23 @@
   </main>
 </div>
 
+<script>
+  $(document).on("click", "#add-button", function (e) {
+    e.preventDefault();
+    $.ajax({
+      type: "POST",
+      url: '{% url "basket:basket_add" %}',
+      data: {
+        productid: $("#add-button").val(),
+        productqty: $("#select option:selected").text(),
+        csrfmiddlewaretoken: "{{csrf_token}}",
+        action: "basket_key",
+      },
+      success: function (json) {
+        document.getElementById("basket-qty").innerHTML = json.qty;
+      },
+      error: function (xhr, errmsg, err) {},
+    });
+  });
+</script>
 {% endblock %}
