--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -92,7 +92,7 @@
               href="{% url 'basket:basket_summary' %}"
               class="btn btn-outline-secondary"
             >
-              <div class="d-inline-flex">5</div>
+              <div id="basket-qty" class="d-inline-flex">0</div>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
