--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -92,7 +92,12 @@
               href="{% url 'basket:basket_summary' %}"
               class="btn btn-outline-secondary"
             >
-              <div id="basket-qty" class="d-inline-flex">0</div>
+              {% with total_qty=basket|length %}
+              <div id="basket-qty" class="d-inline-flex">
+                {% if total_qty > 0 %} {{ total_qty }} {% else %} 0 {% endif %}
+              </div>
+              {% endwith %}
+
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
