--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -8,14 +8,13 @@ Summary{%endblock %} {% block content %}
   <div class="col-12">
     <p>Manage your <b>items</b> in your basket</p>
   </div>
+
   <hr />
 </div>
 <div class="container">
   <div class="row g-3">
     {% if basket|length == 0 %}
-    <div class="col-12">
-      Your basket is empty <a href="{% url 'store:store_home' %}">Shop</a>
-    </div>
+    <div class="col-12">Your basket is empty <a href="/">Shop</a></div>
     {% else %}
     <div class="col-12 bg-light p-3 d-flex justify-content-between">
       <div class="d-flex d-flex-inline">
@@ -75,20 +74,18 @@ Summary{%endblock %} {% block content %}
         <button class="btn btn-light" type="button">Save for later</button>
       </div>
     </div>
+
     <div class="col-md-7 col-lg-8 p-0">
       {% for item in basket %} {% with product=item.product %}
       <div class="card mb-3 border-0 product-item" data-index="{{product.id}}">
         <div class="row g-0">
           <div class="col-md-2 d-none d-md-block">
-            {% for image in product.product_image.all %} {% if
-            image.is_feature%}
             <img
               class="img-fluid"
               alt="Responsive image"
-              src="{{ image.image.url }}"
-              alt="{{ image.image.alt_text }}"
+              src="{{ product.image.url }}"
+              alt="{{ product.image.alt_text }}"
             />
-            {%endfor%}
           </div>
           <div class="col-md-10 ps-md-3">
             <div class="card-body p-1">
