--- a/templates/store/basket/summary.html
+++ b/templates/store/basket/summary.html
@@ -53,13 +53,15 @@ Summary{%endblock %} {% block content %}
         <div class="">
           Sub Total: <span class="fw-bold">£</span>
           <div id="subtotal" class="d-inline-flex fw-bold">
-            {{basket.get_subtotal_price}}
+            {{basket.get_total_price}}
           </div>
         </div>
+
         <div id="">
           Shipping <span class="small">(Next day delivery)</span>:
-          <span class="fw-bold">£11.50</span>
+          <span class="fw-bold">11.50</span>
         </div>
+
         <div class="pt-2">
           Total to pay: <span class="fw-bold h5">£</span
           ><span id="total" class="fw-bold h5">{{basket.get_total_price}}</span>
@@ -106,6 +108,7 @@ Summary{%endblock %} {% block content %}
                 <option value="">3</option>
                 <option value="">4</option>
               </select>
+
               <a
                 type="button"
                 id="update-button"
