--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -21,6 +21,7 @@
   <div class="album py-5 bg-light">
     <div class="container">
       <div class="pb-3 h5">All Books</div>
+
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
         {% for product in products %}
         <a
@@ -47,6 +48,9 @@
       </div>
     </div>
   </div>
+
+  <div><form action="" method="POST">{{form}}</form></div>
+  >
 </main>
 
 {% endblock%}
