--- a/templates/account/registration/register.html
+++ b/templates/account/registration/register.html
@@ -70,7 +70,9 @@
                   Register
                 </button>
                 <p class="text-center">
-                  <a href="">Already have an account?</a>
+                  <a href="{% url 'account:login' %}"
+                    >Already have an account?</a
+                  >
                 </p>
               </form>
             </div>
