user delete/edit view

--- a/templates/store/base.html
+++ b/templates/store/base.html
@@ -2,6 +2,16 @@
 
 {% load static %}
 
+<style>
+  .welcome {
+      margin-right: 750px;
+
+      
+  }
+
+ 
+</style>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -68,6 +78,8 @@
                   </button>
 
                   {% if user.is_authenticated %}
+            
+                  <span class="welcome">Welcocme {{user}}</span>
                   <a type="button" role="button" href="{% url "account:logout" %}"
                       class="btn btn-outline-secondary border-0 basket-btn">
                       <div>
@@ -94,11 +106,12 @@
                       <span class="fs15 fw500">Login</span>
                   </a>
                   {% endif %}
-
+                
 
                   <a type="button" role="button" href="{% url "account:dashboard" %}"
                       class="btn btn-outline-secondary border-0 basket-btn">
                       <div>
+                        
                           <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                               class="bi bi-person" viewBox="0 0 16 16">
                               <path
