--- a/templates/account/user/dashboard.html
+++ b/templates/account/user/dashboard.html
@@ -8,7 +8,8 @@ Summary{%endblock %} {% block content %}
     </div>
     <div class="col-12 d-flex justify-content-between">
       <div>Manage your <b>orders</b> and personal details</div>
-      <div><a href="{% url 'account:edit_details' %}">Change Details</a></div>
+      <div><a href="{% url 'account:edit_details' %}">Edit Account</a></div>
+      <div><a href="{% url 'account:delete_user' %}">Delete Account</a></div>
     </div>
     <hr />
   </div>
