--- a/templates/account/user/delete_confirm.html
+++ b/templates/account/user/delete_confirm.html
@@ -1,5 +1,5 @@
-{% extends "../../store/base.html" %} {% block title %}Log-in{% endblock %} {%
-block content %}
+{% extends "../../store/base.html" %} {% block title %}Log-in{% endblock %}
+{%block content %}
 
 <style>
   .account-form input {
