--- a/templates/account/user/edit_details.html
+++ b/templates/account/user/edit_details.html
@@ -13,6 +13,9 @@
         box-shadow: none;
     }
 </style>
+ 
+ 
+ 
 
 <div class="container-fluid">
     <div class="row no-gutter">
@@ -22,9 +25,12 @@
                     <div class="row">
                         <div class="col-12 col-lg-7  mx-auto">
 
+
+                
+{% if page == 'edit'%}
                 <form class="account-form px-4 pt-4" method="post" enctype="multipart/form-data">
 
-                    {% if user_form.is_valid and profile_form.is_valid  %}
+                    {% if user_form.is_valid   %}
                     <div class="alert alert-primary" role="alert">
                         Details successfully updated!
                     </div>
@@ -34,7 +40,7 @@
                     {%else%}
                     <h3>Change your details</h3>
                     <p>You can edit your account using the following form:</p>
-                    {% endif %}
+                  
 
                     {% if form.errors %}
                     <div class="alert alert-primary" role="alert">
@@ -45,12 +51,30 @@
                     {% csrf_token %}
                     <label class="small font-weight-bold">{{ user_form.email.label}}</label>
                     {{ user_form.email }}
-                    <label class="small font-weight-bold">{{ user_form.first_name.label}}</label>
-                    {{ user_form.first_name }}
+                    <label class="small font-weight-bold">{{ user_form.user_name.label}}</label>
+                    {{ user_form.user_name }}
                    
 
 
                     <button class="btn btn-primary btn-block py-2 mb-4 mt-5 fw-bold w-100" type="submit"
                         value="Save changes">Save Changes</button>
-                    
+                        {% endif %}
+
+                   
+                        {% endif %}
+
+
+
+
+                    {% if page == 'delete'%}
+                     
+                </form>
+                <form class="account-form px-4" action="" method="post">
+                   {% csrf_token %}
+                   <p class=" h3 pt-4 font-weight-bold">Delete Account</p>
+                   <p>Are you sure you want to delete your account?</p>
+                   <button type="submit" role="button"
+                       class="btn btn-danger btn-block py-2 mb-4 mt-5 fw-bold w-100">Delete</button>
+               </form>
+                    {% endif%}
 {% endblock %}
