--- a/templates/account/registration/login.html
+++ b/templates/account/registration/login.html
@@ -51,12 +51,14 @@
                                 <p class="text-center pb-3">
                                     <a href="{% url "account:register" %}">Create an account</a>
                                 </p>
+                            
                             </form>
+
                             <p class="small text-center pt-4">
-                                {% comment %} <a href="{% url "password_reset" %}">Forgotten Password?</a> {% endcomment %}
+                                 <a href="{% url "account:pwdreset" %}">Forgotten Password?</a> 
                             </p>
                             <p class="small text-center">
-                                {% comment %} <a href="{% url "accounts:register" %}">Help Center?</a> {% endcomment %}
+                                <a href="">Help Center?</a>
                             </p>
                      
                         </div>
