--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -12,7 +12,7 @@
           don’t simply skip over it entirely.
         </p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Make an account</a>
+          <a href="{% url 'account:register' %}" class="btn btn-primary my-2">Make an account</a>
         </p>
       </div>
     </div>
