--- a/templates/payment/home.html
+++ b/templates/payment/home.html
@@ -33,7 +33,7 @@
               <form>
                 <div class="row g-3">
                   <div class="col-sm-7">
-                    <label for="firstName" class="form-label">Customer Name</label>
+                    <label for="custName" class="form-label">Customer Name</label>
                     <input type="text" class="form-control" id="custName" placeholder="" required>
                     <div class="invalid-feedback">
                       Valid first name is required.
@@ -47,14 +47,14 @@
                     </div>
                   </div>
                   <div class="col-12">
-                    <label for="address" class="form-label">Address</label>
+                    <label for="custAdd" class="form-label">Address</label>
                     <input type="text" class="form-control" id="custAdd" placeholder="1234 Main St" required>
                     <div class="invalid-feedback">
                       Please enter your shipping address.
                     </div>
                   </div>
                   <div class="col-12">
-                    <label for="address2" class="form-label">Address 2 <span
+                    <label for="custAdd2" class="form-label">Address 2 <span
                         class="text-muted">(Optional)</span></label>
                     <input type="text" class="form-control" id="custAdd2" placeholder="Apartment or suite">
                   </div>
@@ -80,7 +80,7 @@
                   </div>
                   <div class="col-md-3">
                     <label for="Postcode" class="form-label">Postcode</label>
-                    <input type="text" class="form-control" id="postCode" placeholder="" required>
+                    <input type="text" class="form-control" id="Postcode" placeholder="" required>
                     <div class="invalid-feedback">
                       Zip code required.
                     </div>
